--- a/.gitignore
+++ b/.gitignore
@@ -6,10 +6,13 @@
 
 # BlueJ files
 *.ctxt
-
+build
+.gradle
+src/main/resources/chronicle-queues*
+.idea
 # Mobile Tools for Java (J2ME)
 .mtj.tmp/
-
+chronicle-queues*
 # Package Files #
 *.jar
 *.war
