--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,7 @@
 *.ctxt
 build
 .gradle
-src/main/resources/chronicle-queues*
+src/main/resources/*
 .idea
 # Mobile Tools for Java (J2ME)
 .mtj.tmp/
